[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CLI_menu"
version = "0.0.1"
authors = [
  { name="DexterH", email="dexterhedman05@gmail.com" },
]
description = "A library for creating menus in the console"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DexterHedman05/CLI_menu"
"Bug Tracker" = "https://github.com/DexterHedman05/CLI_menu/issues"